--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@ body{
     background-color: #f6f6f6;
 }
 
-
 .login-div {
     width: 430px;
-    height: 500px;
+    height: 700px;
     background-color: #ecf0f3;
     padding: 60px 35px 35px 35px;
     border-radius: 40px;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffff;
+    box-shadow: 13px 13px 20px #cbced1, 
+    -13px -13px 20px #ffff;
 }
 
 .logo{
@@ -31,8 +31,66 @@ body{
     height: 100px;
     border-radius: 50%;
     margin: 0 auto;
+    box-shadow: 0px 0px 2px #5f5f5f, 
+    0px 0px 0px 5px #ecf0f3,
+    8px 8px 15px #afaaa7,
+    -8px -8px 15px #ffff;
+}
+
+.title{
+    text-align: center;
+    font-size: 28px;
+    padding-top: 24px;
+}
+
+.fields{
+    width: 100%;
+    padding: 75px 5px 5px 5px;
+}
+.fields input{
+    border: none;
+    background: none;
+    font-size: 18px;
+    padding: 20px 10px 20px 5px;
+}
+
+.username, .password{
+    margin-bottom: 30px;
+    border-radius: 25px;
+    box-shadow: 8px 8px 8px #cbced1, 
+    -8px -8px 8px #ffff;
 }
 
 .svg-icon{
     height: 22px;
+    margin: 0 10px -3px 20px;
+}
+
+.login-button{
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+    background: #02c8bd;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    box-shadow: 3px 3px 8px #b1b1b1,
+    -3px -3px 8px #ffffff;
+}
+
+.login-button:hover{
+    background-color: #50e5e9;
+}
+
+.link{
+    padding-top: 20px;
+    text-align: center;
+}
+
+.link a{
+    text-decoration: none;
+    color: #aaaaaa;
+    font-size: 15px;
 }
