new transition for login button

--- a/style.css
+++ b/style.css
@@ -78,10 +78,12 @@ body{
     color: white;
     box-shadow: 3px 3px 8px #b1b1b1,
     -3px -3px 8px #ffffff;
+    transition: all 0.3s linear;
+   
 }
 
 .login-button:hover{
-    background-color: #50e5e9;
+    background-color: #1de17b;
 }
 
 .link{
